1.mdと3.mdに画像を追加，画像を追加

--- a/articles/1.md
+++ b/articles/1.md
@@ -1,2 +1,3 @@
 こんにちは、兼田です。<br>
-最近はブログに書けるような生活を送っていませんが、読んだ本や旅行の話などをしていけたらと思います。よろしくお願いします。
+最近はブログに書けるような生活を送っていませんが、読んだ本や旅行の話などをしていけたらと思います。よろしくお願いします。<br>
+<img src="articles/images/1_1.jpg" width="570" height="371">
