--- a/articles/3.md
+++ b/articles/3.md
@@ -10,7 +10,7 @@
 [リンクです](https://www.sankei.com/article/20240219-E6EQAP3TRFN7HLPYPJHT5S72OM/)
 <br>
 画像です
-<img src="images/1_1.jpg" width="570" height="371">
+<img src="articles/images/1_1.jpg" width="570" height="371">
 <div align="center">
 中央寄せです
 </div>
